--- a/src/Components/Miembros/Miembros.css
+++ b/src/Components/Miembros/Miembros.css
@@ -13,6 +13,8 @@
 
 .card-member .card-league {
     margin-right: 20px;
+    max-width   : 60px;
+    width       : 100%;
 }
 
 .card-member .card-league img {
