Introducing loader when members are loading

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,7 +1,8 @@
 .container {
-  max-width : 1024px;
-  width     : 100%;
-  margin    : 0 auto;
-  margin-top: 20px;
-  padding   : 0 10px;
+   position  : relative;
+   max-width : 1024px;
+   width     : 100%;
+   margin    : 0 auto;
+   margin-top: 20px;
+   padding   : 0 10px;
 }
