--- a/src/Components/Miembros/Miembros.scss
+++ b/src/Components/Miembros/Miembros.scss
@@ -4,6 +4,12 @@
    margin-bottom   : 20px;
    cursor          : pointer;
 
+   &:hover {
+      box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),
+         0px 10px 14px 1px rgba(0, 0, 0, 0.14),
+         0px 4px 18px 3px rgba(0, 0, 0, 0.12);
+   }
+
    .card-league {
       margin-right: 20px;
       max-width   : 60px;
@@ -20,14 +26,4 @@
       max-width : 80px;
       width     : 100%;
    }
-}
-
-.card-member:hover {
-   box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),
-      0px 10px 14px 1px rgba(0, 0, 0, 0.14),
-      0px 4px 18px 3px rgba(0, 0, 0, 0.12);
-}
-
-.loader {
-   margin: 0 auto;
 }
